--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "test": "mocha tests/*.js --exit",
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "base64-img": "^1.0.4",
     "bcrypt": "^5.0.1",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -16,6 +19,7 @@
     "fastest-validator": "^1.13.0",
     "is-base64": "^1.1.0",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^10.1.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
