--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "base64-img": "^1.0.4",
     "bcrypt": "^5.0.1",
     "chai": "^4.3.6",
@@ -24,6 +25,12 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
     "sequelize": "^6.21.4",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "yamljs": "^0.3.0"
   }
 }
