--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "test": "mocha tests/*.js --exit",
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "migrate:refresh": "npx sequelize db:migrate:undo:all && npx sequelize db:migrate",
+    "migrate:refresh:seed": "npx sequelize db:migrate:undo:all && npx sequelize db:migrate && npx sequelize db:seed:all"
   },
   "dependencies": {
     "axios": "^1.3.4",
